<?xml version="1.0"?>
<package format="2">
  <name>axrosbag_ros</name>
  <version>1.0.0</version>
  <description>The axrosbag_ros package</description>
  
  <maintainer email="xxx@xxx.xxx">autoxing</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>topic_tools</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
