<?xml version="1.0"?>
<package format="2">
  <name>axrosbag</name>
  <version>1.0.0</version>
  <description>The axrosbag package</description>
  
  <maintainer email="xxx@xxx.xxx">autoxing</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbag</depend>
  <depend>axrosbag_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>std_srvs</depend>
  <depend>topic_tools</depend>

</package>
